--- a/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
+++ b/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
@@ -142,7 +142,9 @@
                 </td>
                 <td>
                   <ng-container *ngIf="aid.disease.displayName; else diseaseElse">
-                    {{ aid.disease.displayName }}
+                    <a routerLink="/diseases/{{aid.disease.id}}">
+                      <cvc-disease-tag [disease]="aid.disease"></cvc-disease-tag>
+                    </a>
                   </ng-container>
                   <ng-template #diseaseElse>
                     <i>N/A</i>
@@ -151,7 +153,12 @@
                 <td>
                   <p *ngIf="aid.drugs.length > 0; else drugsElse" nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="1">
                     <span *ngFor="let drug of aid.drugs; last as isLast" >
-                      {{ drug.name }}{{ isLast ? '' : ', ' }}{{isLast && aid.drugs.length > 1 ?  ' (' + aid.drugInteractionType + ')' : '' }}
+                      <a routerLink="/drugs/{{drug.id}}">
+                        <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
+                      </a>
+                    </span>
+                    <span *ngIf="aid.drugs.length > 1">
+                      ({{ aid.drugInteractionType }})
                     </span>
                   </p>
                   <ng-template #drugsElse>
