--- a/client/src/app/components/shared/evidence-card/evidence-card.component.html
+++ b/client/src/app/components/shared/evidence-card/evidence-card.component.html
@@ -31,14 +31,20 @@
                                 <ng-template ngPluralCase="=0"><b>Drug:&nbsp;</b> <i>Not Applicable</i></ng-template>
                                 <ng-template ngPluralCase="=1"><b>Drug:&nbsp;</b></ng-template>
                                 <ng-template ngPluralCase="other"><b>Drugs:&nbsp;</b></ng-template>
-                                <ng-container *ngFor="let drug of evidence.drugs; let last = last">
-                                  {{ drug.name }} <ng-container *ngIf="!last">,&nbsp;</ng-container>
+                                <ng-container *ngFor="let drug of evidence.drugs">
+                                    <a routerLink="/drugs/{{drug.id}}">
+                                        <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
+                                    </a>
                                 </ng-container>
-                                <ng-container *ngIf="evidence.drugs.length > 1">{{ ' (' + evidence.drugInteractionType + ')' }}</ng-container>
+                                <ng-container *ngIf="evidence.drugs.length > 1">({{ evidence.drugInteractionType }})</ng-container>
                             </nz-row>
                         </nz-col>
                         <nz-col [nzSpan]="8">
-                            <nz-row *ngIf="evidence.disease"><b>Disease:&nbsp;</b>{{ evidence.disease.displayName }}</nz-row>
+                            <nz-row *ngIf="evidence.disease"><b>Disease:&nbsp;</b>
+                                <a routerLink="/diseases/{{evidence.disease.id}}">
+                                    <cvc-disease-tag [disease]="evidence.disease"></cvc-disease-tag>
+                                </a>
+                            </nz-row>
                             <nz-row *ngIf="!evidence.disease"><b>Disease:&nbsp;</b><i>Not Applicable</i></nz-row>
                             <nz-row [ngPlural]="evidence.phenotypes.length">
                                 <ng-template ngPluralCase="=0"><b>Associated Phenotype:&nbsp;</b> <i>-</i></ng-template>
