--- a/client/src/app/views/phenotypes/phenotypes-browse/phenotypes-browse.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-browse/phenotypes-browse.component.html
@@ -42,7 +42,9 @@
             <tbody>
               <tr *ngFor="let p of phenotypesTable.data">
                 <td>
-                  <a routerLink="/phenotypes/{{p.id}}">{{p.name}}</a>
+                  <a routerLink="/phenotypes/{{p.id}}">
+                    <cvc-phenotype-tag [phenotype]="p"></cvc-phenotype-tag>
+                  </a>
                 </td>
                 <td>
                   {{ p.hpoId}}
