--- a/client/src/app/components/shared/assertion-card/assertion-card.component.html
+++ b/client/src/app/components/shared/assertion-card/assertion-card.component.html
@@ -43,8 +43,10 @@
                                 <ng-template ngPluralCase="=0"><b>Associated Phenotype:&nbsp;</b> <i>-</i></ng-template>
                                 <ng-template ngPluralCase="=1"><b>Associated Phenotype:&nbsp;</b></ng-template>
                                 <ng-template ngPluralCase="other"><b>Associated Phenotypes:&nbsp;</b></ng-template>
-                                <ng-container *ngFor="let p of assertion.phenotypes; let last = last">
-                                  {{ p.name }} <ng-container *ngIf="!last">,&nbsp;</ng-container>
+                                <ng-container *ngFor="let p of assertion.phenotypes">
+                                    <a routerLink="/phenotypes/{{p.id}}">
+                                        <cvc-phenotype-tag [phenotype]="p"></cvc-phenotype-tag>
+                                    </a>
                                 </ng-container>
                             </nz-row>
                             <nz-row *ngIf="assertion.ampLevel"><b>AMP/ASCO/CAP Category:&nbsp;</b>{{ assertion.ampLevel | formatAmp: 'verbose' }}</nz-row>
