--- a/client/src/app/views/sources/sources-summary/sources-summary.component.html
+++ b/client/src/app/views/sources/sources-summary/sources-summary.component.html
@@ -33,9 +33,10 @@
           <ng-template ngPluralCase="=0"><b>Clinical Trial:&nbsp;</b> <i>-</i></ng-template>
           <ng-template ngPluralCase="=1"><b>Clinical Trial:&nbsp;</b></ng-template>
           <ng-template ngPluralCase="other"><b>Clinical Trials:&nbsp;</b></ng-template>
-          <ng-container *ngFor="let t of source.clinicalTrials; let last = last">
-            <a href="https://clinicaltrials.gov/show/{{t.nctId}}" target="_blank">{{ t.nctId }}</a>
-            <ng-container *ngIf="!last">,&nbsp;</ng-container>
+          <ng-container *ngFor="let t of source.clinicalTrials">
+            <a routerLink="/clinical-trials/{{t.id}}">
+              <cvc-clinical-trial-tag [clinicalTrial]="t"></cvc-clinical-trial-tag>
+            </a>
           </ng-container>
         </nz-row>
       </div>
