--- a/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
@@ -314,11 +314,7 @@
                   </ng-template>
                 </td>
                 <td>
-                  <p *ngIf="eid.drugs.length > 0; else drugsElse"
-                    nz-typography
-                    nzEllipsis
-                    nzExpandable
-                    [nzEllipsisRows]="1">
+                  <p *ngIf="eid.drugs.length > 0; else drugsElse" nz-typography >
                     <span *ngFor="let drug of eid.drugs">
                       <a routerLink="/drugs/{{drug.id}}">
                         <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
