add load more buttons for all browse tables

--- a/client/src/app/views/clinical-trials/clinical-trials-browse/clinical-trials-browse.component.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-browse/clinical-trials-browse.component.html
@@ -63,3 +63,6 @@
     </div>
   </nz-page-header-content>
 </nz-page-header>
+<ng-container *ngrxLet="pageInfo$ as pageInfo">
+  <button *ngIf="pageInfo.hasNextPage" nz-button (click)="loadMore(pageInfo.endCursor)">Load More</button>
+</ng-container>
