--- a/client/src/app/components/shared/variants-browse/variants-browse.component.html
+++ b/client/src/app/components/shared/variants-browse/variants-browse.component.html
@@ -119,6 +119,6 @@
   </nz-page-header-content>
 </nz-page-header>
 
-<!-- <ng-container *ngrxLet="pageInfo$ as pageInfo">
+<ng-container *ngrxLet="pageInfo$ as pageInfo">
   <button *ngIf="pageInfo.hasNextPage" nz-button (click)="loadMore(pageInfo.endCursor)">Load More</button>
-</ng-container> -->
+</ng-container>
