use titlecase pipe for drug interaction types

--- a/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
+++ b/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
@@ -158,7 +158,7 @@
                       </a>
                     </span>
                     <span *ngIf="aid.drugs.length > 1">
-                      ({{ aid.drugInteractionType }})
+                      ({{ aid.drugInteractionType | titlecase }})
                     </span>
                   </p>
                   <ng-template #drugsElse>
