--- a/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
@@ -321,7 +321,7 @@
                       </a>
                     </span>
                     <span *ngIf="eid.drugs.length > 1">
-                      ({{ eid.drugInteractionType }})
+                      ({{ eid.drugInteractionType | titlecase }})
                     </span>
                   </p>
                   <ng-template #drugsElse>
