--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -125,7 +125,7 @@
                       Drug
                     </ng-template>
                     <ng-template ngPluralCase="other">
-                      Drugs ({{ evidence.drugInteractionType }})
+                      Drugs ({{ evidence.drugInteractionType | titlecase }})
                     </ng-template>
                   </ng-container>
                 </ng-template>
