--- a/client/src/app/components/shared/assertion-card/assertion-card.component.html
+++ b/client/src/app/components/shared/assertion-card/assertion-card.component.html
@@ -29,7 +29,7 @@
                                         <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
                                     </a>
                                 </ng-container>
-                                <ng-container *ngIf="assertion.drugs.length > 1">{{ ' (' + assertion.drugInteractionType + ')' }}</ng-container>
+                                <ng-container *ngIf="assertion.drugs.length > 1">({{ assertion.drugInteractionType | titlecase }})</ng-container>
                             </nz-row>
                         </nz-col>
                         <nz-col [nzSpan]="8">
