--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
@@ -1,6 +1,33 @@
 <ng-container *ngIf="evidence$ | ngrxPush as evidence">
-  <cvc-section-navigation [entity]="{ id: evidence.id, displayName: evidence.name }">
+  <cvc-section-navigation [entity]="{ id: evidence.id, displayName: evidence.name }"
+    [relationsTpl]="evidenceRelations">
   </cvc-section-navigation>
+  <ng-template #evidenceRelations>
+    <nz-space nzDirection="horizontal">
+      <!-- parent relations -->
+      <nz-space-item>
+        <span nz-typography
+          class="label"><strong>{{ evidence.name }}</strong> Parents:</span>
+      </nz-space-item>
+      <nz-space-item class="tags">
+        <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
+        <cvc-variant-tag [variant]="evidence.variant"></cvc-variant-tag>
+      </nz-space-item>
+
+      <!-- contained/involved relations -->
+      <ng-container *ngIf="evidence.assertions.length > 0">
+        <nz-space-item>
+          <span nz-typography
+            class="label">Supports:</span>
+        </nz-space-item>
+        <nz-space-item class="tags">
+          <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
+            [assertion]="assertion"></cvc-assertion-tag>
+        </nz-space-item>
+      </ng-container>
+    </nz-space>
+  </ng-template>
+
   <div cvcFlaggable
     [flags]="flagsTotal$ | ngrxPush">
     <nz-page-header class="site-page-header">
@@ -10,8 +37,7 @@
         [ngClass]="{ 'flagged': evidence.flags.totalCount > 0 }">
 
         <i nz-icon
-          nzType="civic:evidence"></i>
-        {{ evidence.name }}
+          nzType="civic:evidence"></i> {{ evidence.name }}
       </nz-page-header-title>
 
       <!-- subtitle -->
