--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.less
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.less
@@ -7,3 +7,12 @@
 nz-space, nz-space-item {
   width: 100%;
 }
+
+.status-tags ::ng-deep {
+  nz-tag {
+    margin-right: 0;
+  }
+  .ant-descriptions-item-label {
+    white-space: nowrap;
+  }
+}
