--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
@@ -4,6 +4,7 @@
   </cvc-section-navigation>
   <ng-template #evidenceRelations>
     <nz-space nzDirection="horizontal">
+
       <!-- parent relations -->
       <nz-space-item>
         <span nz-typography
@@ -15,16 +16,17 @@
       </nz-space-item>
 
       <!-- contained/involved relations -->
-      <ng-container *ngIf="evidence.assertions.length > 0">
-        <nz-space-item>
-          <span nz-typography
-            class="label">Supports:</span>
-        </nz-space-item>
-        <nz-space-item class="tags">
-          <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
-            [assertion]="assertion"></cvc-assertion-tag>
-        </nz-space-item>
-      </ng-container>
+      <!-- <ng-container *ngIf="evidence.assertions.length > 0">
+           <nz-space-item>
+           <span nz-typography
+           class="label">Supports:</span>
+           </nz-space-item>
+           <nz-space-item class="tags">
+           <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
+           [assertion]="assertion"></cvc-assertion-tag>
+           </nz-space-item>
+           </ng-container> -->
+
     </nz-space>
   </ng-template>
 
