--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -1,6 +1,33 @@
 <ng-container *ngIf="assertion$ | ngrxPush as assertion">
-  <cvc-section-navigation [entity]="{ id: assertion.id, displayName: assertion.name }">
+  <cvc-section-navigation [entity]="{ id: assertion.id, displayName: assertion.name }" [relationsTpl]="assertionRelations">
   </cvc-section-navigation>
+  <ng-template #assertionRelations>
+    <nz-space nzDirection="horizontal">
+
+      <!-- parent relations -->
+      <nz-space-item>
+        <span nz-typography
+          class="label">Involved with:</span>
+      </nz-space-item>
+      <nz-space-item class="tags">
+        <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
+        <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
+      </nz-space-item>
+
+      <!-- contained/involved relations -->
+      <!-- <ng-container *ngIf="evidence.assertions.length > 0">
+           <nz-space-item>
+           <span nz-typography
+           class="label">Supports:</span>
+           </nz-space-item>
+           <nz-space-item class="tags">
+           <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
+           [assertion]="assertion"></cvc-assertion-tag>
+           </nz-space-item>
+           </ng-container> -->
+
+    </nz-space>
+  </ng-template>
   <div cvcFlaggable
     [flags]="flagsTotal$ | ngrxPush">
     <nz-page-header class="site-page-header">
