--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -10,21 +10,13 @@
           class="label">Involved with:</span>
       </nz-space-item>
       <nz-space-item class="tags">
-        <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
-        <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
+        <a routerLink="/genes/{{ assertion.gene.id }}">
+          <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
+        </a>
+        <a routerLink="/variants/{{ assertion.variant.id }}">
+          <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
+        </a>
       </nz-space-item>
-
-      <!-- contained/involved relations -->
-      <!-- <ng-container *ngIf="evidence.assertions.length > 0">
-           <nz-space-item>
-           <span nz-typography
-           class="label">Supports:</span>
-           </nz-space-item>
-           <nz-space-item class="tags">
-           <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
-           [assertion]="assertion"></cvc-assertion-tag>
-           </nz-space-item>
-           </ng-container> -->
 
     </nz-space>
   </ng-template>
