--- a/client/src/app/views/variants/variants-detail/variants-detail.component.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.component.html
@@ -1,6 +1,35 @@
 <ng-container *ngIf="variant$ | ngrxPush as variant">
-  <cvc-section-navigation [entity]="{ id: variant.id, displayName: variant.name }">
+  <cvc-section-navigation [entity]="{ id: variant.id, displayName: variant.name }" [relationsTpl]="variantRelations">
   </cvc-section-navigation>
+  <ng-template #variantRelations>
+    <nz-space nzDirection="horizontal">
+
+      <!-- parent relations -->
+      <nz-space-item>
+        <span nz-typography
+          class="label"><strong>{{ variant.name }}</strong> Parent:</span>
+      </nz-space-item>
+      <nz-space-item class="tags">
+        <a routerLink="/genes/{{ variant.gene.id }}">
+          <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
+        </a>
+      </nz-space-item>
+
+      <!-- contained/involved relations -->
+      <!-- <ng-container *ngIf="evidence.assertions.length > 0">
+           <nz-space-item>
+           <span nz-typography
+           class="label">Supports:</span>
+           </nz-space-item>
+           <nz-space-item class="tags">
+           <cvc-assertion-tag *ngFor="let assertion of evidence.assertions"
+           [assertion]="assertion"></cvc-assertion-tag>
+           </nz-space-item>
+           </ng-container> -->
+
+    </nz-space>
+  </ng-template>
+
   <div cvcFlaggable
     [flags]="flagsTotal$ | ngrxPush">
     <nz-page-header class="site-page-header">
