--- a/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
+++ b/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
@@ -1,89 +1,84 @@
-<nz-space nzSize="middle" *ngIf="(assertion$ | ngrxPush) as assertion" nzDirection="vertical" class="space-align-block">
+<nz-space nzSize="middle"
+  *ngIf="(assertion$ | ngrxPush) as assertion"
+  nzDirection="vertical"
+  class="space-align-block">
   <nz-space-item>
-    <div nz-row [nzGutter]="16">
-      <div nz-col [nzSpan]="12">
-        <nz-row>
-          <nz-col [nzSpan]="8">
-            <p><b>Variant Origin: </b>{{ assertion.variantOrigin | evidenceEnumDisplay }}</p>
-          </nz-col>
-          <nz-col [nzSpan]="16">
-            <p>
-              <b>Disease: </b>
-              <a routerLink="/diseases/{{assertion.disease.id}}">
-                <cvc-disease-tag [disease]="assertion.disease"></cvc-disease-tag>
-              </a>
-            </p>
-          </nz-col>
-        </nz-row>
-        <nz-row>
-          <nz-col [nzSpan]="24">
-            <p><b>Summary: </b>{{ assertion.summary }}</p>
-          </nz-col>
-        </nz-row>
-        <nz-row>
-          <nz-col [nzSpan]="24">
-            <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="14"><b>Description: </b>{{ assertion.description }}</p>
-          </nz-col>
-        </nz-row>
-      </div>
-      <div nz-col [nzSpan]="12">
-        <nz-row><b>Assertion Type:&nbsp;</b>{{ assertion.assertionType | evidenceEnumDisplay}}</nz-row>
-        <nz-row><b>Assertion Direction:&nbsp;</b>{{ assertion.assertionDirection | evidenceEnumDisplay }}</nz-row>
-        <nz-row><b>Clinical Significance:&nbsp;</b>{{ assertion.clinicalSignificance | evidenceEnumDisplay }}</nz-row>
-        <nz-row [ngPlural]="assertion.drugs.length">
-            <ng-template ngPluralCase="=0"><b>Drug:&nbsp;</b> <i>Not Applicable</i></ng-template>
-            <ng-template ngPluralCase="=1"><b>Drug:&nbsp;</b></ng-template>
-            <ng-template ngPluralCase="other"><b>Drugs:&nbsp;</b></ng-template>
-            <ng-container *ngFor="let drug of assertion.drugs">
-              <a routerLink="/drugs/{{drug.id}}">
-                <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
-              </a>
-            </ng-container>
-            <ng-container *ngIf="assertion.drugs.length > 1">{{ ' (' + assertion.drugInteractionType + ')' }}</ng-container>
-        </nz-row>
-        <nz-row [ngPlural]="assertion.phenotypes.length">
-          <ng-template ngPluralCase="=0"><b>Associated Phenotype:&nbsp;</b> <i>-</i></ng-template>
-          <ng-template ngPluralCase="=1"><b>Associated Phenotype:&nbsp;</b></ng-template>
-          <ng-template ngPluralCase="other"><b>Associated Phenotypes:&nbsp;</b></ng-template>
-          <ng-container *ngFor="let p of assertion.phenotypes">
-            <a routerLink="/phenotypes/{{p.id}}">
-              <cvc-phenotype-tag [phenotype]="p"></cvc-phenotype-tag>
-            </a>
-          </ng-container>
-        </nz-row>
-        <nz-row *ngIf="assertion.ampLevel"><b>AMP/ASCO/CAP Category:&nbsp;</b>{{ assertion.ampLevel | formatAmp: 'verbose' }}</nz-row>
-        <nz-row *ngIf="assertion.acmgCodes.length > 0">
-          <span *ngIf="assertion.acmgCodes.length === 1; else acmgElse"><b>ACMG Code:&nbsp;</b></span>
-          <ng-template #acmgElse><b>ACMG Codes:&nbsp;</b></ng-template>
-          <span *ngFor="let code of assertion.acmgCodes; let last = last" >
-            {{ code.code }}<ng-container *ngIf="!last">,&nbsp;</ng-container>
-          </span>
-        </nz-row>
-        <nz-row *ngIf="assertion.nccnGuideline"><b>NCCN Guideline:&nbsp;</b>{{ assertion.nccnGuideline }}</nz-row>
-        <nz-row>
-          <b>Regulatory Approval:&nbsp;</b>
-          <i *ngIf="assertion.regulatoryApproval; else regulatoryApprovalElse" nz-icon nzType="check-square"></i>
-          <ng-template #regulatoryApprovalElse>
-            <i nz-icon nzType="close-square"></i>
-          </ng-template>
-        </nz-row>
-        <nz-row>
-          <b>FDA Companion Test:&nbsp;</b>
-          <i *ngIf="assertion.fdaCompanionTest; else fdaTestElse" nz-icon nzType="check-square"></i>
-          <ng-template #fdaTestElse>
-            <i nz-icon nzType="close-square"></i>
-          </ng-template>
-        </nz-row>
-      </div>
-    </div>
+    <nz-row [nzGutter]="16">
+      <!-- assertion summary, desciption, FDA -->
+      <nz-col [nzSpan]="12">
+
+        <nz-space nzDirection="horizontal">
+
+          <!-- summary, description -->
+          <nz-space-item>
+            <nz-descriptions nzLayout="vertical"
+              nzSize="small"
+              nzBordered="true"
+              [nzColumn]="1">
+              <nz-descriptions-item nzTitle="Summary">
+                <p nz-typography>{{ assertion.summary }}</p>
+              </nz-descriptions-item>
+
+              <nz-descriptions-item nzTitle="Description">
+                <p nz-typography
+                  nzEllipsis
+                  nzExpandable
+                  [nzEllipsisRows]="14">{{ assertion.description }}</p>
+              </nz-descriptions-item>
+
+            </nz-descriptions>
+          </nz-space-item>
+
+        </nz-space>
+      </nz-col>
+      <!-- assertion details column -->
+      <nz-col [nzSpan]="12">
+        <nz-space nzDirection="horizontal">
+
+          <!-- gene, variant info -->
+          <nz-space-item>
+            <nz-descriptions nzLayout="vertical"
+              nzSize="small"
+              nzBordered="true"
+              [nzColumn]="3">
+              <nz-descriptions-item nzTitle="Gene">
+                <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
+              </nz-descriptions-item>
+
+              <nz-descriptions-item nzTitle="Variant">
+                <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
+              </nz-descriptions-item>
+
+              <nz-descriptions-item nzTitle="Allele Registry ID">
+                <span nz-typography
+                  *ngIf="assertion.variant.alleleRegistry">
+                  <a [href]="https://reg.genome.network/allele/{{ assertion.variant.alleleRegistryId }}.html"
+                    target="_blank">
+                    {{ assertion.variant.alleleRegistryId }}
+                  </a>
+                </span>
+                <span nz-typography
+                  nzType="secondary"
+                  *ngIf="!assertion.variant.alleleRegistry">None Provided</span>
+              </nz-descriptions-item>
+
+            </nz-descriptions>
+          </nz-space-item>
+
+        </nz-space>
+
+      </nz-col>
+    </nz-row>
   </nz-space-item>
   <nz-space-item>
     <cvc-evidence-browse [assertionId]="assertion.id"></cvc-evidence-browse>
   </nz-space-item>
   <nz-space-item>
-    <div nz-row [nzGutter]="16">
+    <div nz-row
+      [nzGutter]="16">
       <nz-col [nzSpan]="16">
-        <cvc-event-feed [subscribable]="subscribable" tagDisplay="hideSubject"></cvc-event-feed>
+        <cvc-event-feed [subscribable]="subscribable"
+          tagDisplay="hideSubject"></cvc-event-feed>
       </nz-col>
     </div>
   </nz-space-item>
