--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -4,7 +4,8 @@
   class="space-align-block">
   <nz-space-item>
     <nz-row [nzGutter]="16">
-      <!-- evidence description, source column -->
+
+      <!-- evidence description, source, clinical trials column -->
       <nz-col [nzSpan]="12">
         <nz-space nzDirection="vertical">
 
@@ -57,27 +58,38 @@
       <!-- evidence details column -->
       <nz-col [nzSpan]="12">
         <nz-space nzDirection="vertical">
-          <!-- status, key curation events -->
+          <!-- status, curation events -->
           <nz-space-item>
-            <nz-descriptions nzLayout="horizontal" nzSize="small" nzBordered="true" class="status-tags">
+            <nz-descriptions nzLayout="horizontal"
+              nzSize="small"
+              nzBordered="true"
+              class="status-tags">
 
               <!-- status -->
               <nz-descriptions-item nzTitle="Status">
                 <cvc-status-tag [status]="evidence.status"></cvc-status-tag>
               </nz-descriptions-item>
-              <!-- key curation events -->
+
+              <!-- submit/accept/reject curation events -->
               <nz-descriptions-item nzTitle="Submitted by">
                 <cvc-user-tag [user]="evidence.submissionEvent.originatingUser"></cvc-user-tag>
               </nz-descriptions-item>
-              <!-- only show acceptance if no rejection event exists -->
-              <ng-container [ngSwitch]="evidence.rejectionEvent === null">
-                <nz-descriptions-item *ngSwitchCase="true" nzTitle="Accepted by">
-                  <cvc-user-tag [user]="evidence.acceptanceEvent.originatingUser"></cvc-user-tag>
-                </nz-descriptions-item>
-                <nz-descriptions-item *ngSwitchCase="false" nzTitle="Rejected by">
-                  <cvc-user-tag [user]="evidence.rejectionEvent.originatingUser"></cvc-user-tag>
-                </nz-descriptions-item>
+
+              <!-- display accept/reject only if either exists -->
+              <ng-container *ngIf="evidence.rejectionEvent !== null || evidence.acceptanceEvent !== null">
+                <!-- show acceptance only if no rejection event exists -->
+                <ng-container [ngSwitch]="evidence.rejectionEvent === null">
+                  <nz-descriptions-item *ngSwitchCase="true"
+                    nzTitle="Accepted by">
+                    <cvc-user-tag [user]="evidence.acceptanceEvent.originatingUser"></cvc-user-tag>
+                  </nz-descriptions-item>
+                  <nz-descriptions-item *ngSwitchCase="false"
+                    nzTitle="Rejected by">
+                    <cvc-user-tag [user]="evidence.rejectionEvent.originatingUser"></cvc-user-tag>
+                  </nz-descriptions-item>
+                </ng-container>
               </ng-container>
+
             </nz-descriptions>
           </nz-space-item>
 
@@ -89,30 +101,30 @@
               nzBordered="true"
               [nzColumn]="(evidence.disease.name !== undefined && evidence.phenotypes.length > 0) ? 1 : 2">
 
-                  <!-- disease -->
-                  <nz-descriptions-item nzTitle="Disease">
-                    <ng-container *ngIf="evidence.disease.name">
-                      <a routerLink="/diseases/{{evidence.disease.id}}">
-                        <cvc-disease-tag [disease]="evidence.disease"></cvc-disease-tag>
-                      </a>
-                    </ng-container>
-                    <span *ngIf="!evidence.disease.name"
-                      nz-typography
-                      nzType="secondary">N/A</span>
-                  </nz-descriptions-item>
+              <!-- disease -->
+              <nz-descriptions-item nzTitle="Disease">
+                <ng-container *ngIf="evidence.disease.name">
+                  <a routerLink="/diseases/{{evidence.disease.id}}">
+                    <cvc-disease-tag [disease]="evidence.disease"></cvc-disease-tag>
+                  </a>
+                </ng-container>
+                <span *ngIf="!evidence.disease.name"
+                  nz-typography
+                  nzType="secondary">N/A</span>
+              </nz-descriptions-item>
 
-                  <!-- phenotypes -->
-                  <nz-descriptions-item [nzTitle]="evidence.phenotypes.length > 1 ? 'Phenotypes' : 'Phenotype'">
-                    <ng-container *ngIf="evidence.phenotypes.length === 0">
-                      <span nz-typography
-                        nzType="secondary">None Specified</span>
-                    </ng-container>
-                    <ng-container *ngIf="evidence.phenotypes.length > 0">
-                      <ng-container *ngFor="let ph of evidence.phenotypes">
-                        <cvc-phenotype-tag [phenotype]="ph"></cvc-phenotype-tag>
-                      </ng-container>
-                    </ng-container>
-                  </nz-descriptions-item>
+              <!-- phenotypes -->
+              <nz-descriptions-item [nzTitle]="evidence.phenotypes.length > 1 ? 'Phenotypes' : 'Phenotype'">
+                <ng-container *ngIf="evidence.phenotypes.length === 0">
+                  <span nz-typography
+                    nzType="secondary">None Specified</span>
+                </ng-container>
+                <ng-container *ngIf="evidence.phenotypes.length > 0">
+                  <ng-container *ngFor="let ph of evidence.phenotypes">
+                    <cvc-phenotype-tag [phenotype]="ph"></cvc-phenotype-tag>
+                  </ng-container>
+                </ng-container>
+              </nz-descriptions-item>
             </nz-descriptions>
           </nz-space-item>
 
@@ -141,7 +153,7 @@
 
                 <!-- drug description title template -->
                 <ng-template #drugsTitle>
-                  <ng-container [ngPlural]="evidence.drugs.length" >
+                  <ng-container [ngPlural]="evidence.drugs.length">
                     <ng-template ngPluralCase="=0">
                       Drug
                     </ng-template>
@@ -174,7 +186,8 @@
               </nz-descriptions-item>
 
               <!-- clinical significance -->
-              <nz-descriptions-item nzTitle="Clinical Significance" nzSpan="2">
+              <nz-descriptions-item nzTitle="Clinical Significance"
+                nzSpan="2">
                 {{ evidence.clinicalSignificance | evidenceEnumDisplay }}
               </nz-descriptions-item>
 
